--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,4 @@
 <form method="post" enctype="multipart/form-data">
-    <input type="file" name="my_file[]" multiple>
+    <input type="file" name="file" multiple>
     <input type="submit" value="Upload">
 </form>
