--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,5 @@
-<form method="post" enctype="multipart/form-data">
-    <input type="file" name="file" multiple>
+<form method="post" action="" enctype="multipart/form-data">
+    <input type="text" name="username">
+    <input type="file" name="posts">
     <input type="submit" value="Upload">
 </form>
