template and css style fix

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,6 +19,7 @@
         <div class="container">
             <h1>{{ home_text }}</h1>
             <h2>{{ description }}</h2>
+            <p class="instructions">Instructions</p>
             <h3>{{ instructions }}</h3>
             <form method="post" action="" enctype="multipart/form-data">
                 <div class="form-row">
