--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,7 +1,3 @@
-.button{
-    margin-top: 15px;
-}
-
 h1 {
     text-align: center;
     margin-bottom: 25px;
@@ -11,3 +7,15 @@ h2, h3 {
     margin-bottom: 50px;
 }
 
+h2 {
+    font-size: 1.75rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+.instructions {
+    font-size: 1.75rem;
+    font-weight: bold;
+}
